added pojos and index.html

--- a/WebContent/templates/index.html
+++ b/WebContent/templates/index.html
@@ -11,9 +11,9 @@
 
     <meta charset="UTF-8">
     <title></title>
-    <div>
+    <div ng-app="">
     <img style="float: left" src="../img/banner.png">
-        <span style="float: right; padding: 20px 10px 20px">
+        <span style="float: right; padding: 20px 50px 20px 20px">
             <a class="glyphicon glyphicon-shopping-cart " href="#"></a>
         </span>
         <span style="float: right; padding: 20px">
@@ -31,15 +31,15 @@
         <button id="compare" class="col-lg-2 btn btn-primary">Compare</button>
         <button id="blog" class="col-lg-2 btn btn-primary">Blog</button>
     </div>
-    <div class="jumbotron">
-        <h1>Hey There!</h1>
-        <p>Check out the latest year end offers and avail huge discounts!</p>
-        <p><a class="btn btn-primary btn-lg" style="margin: 20px" href="#" role="button">Learn more</a></p>
-    </div>
-    <div class="jumbotron" style="text-align: right">
-        <h1>Shop for more than 30 brands on MobiKart!</h1>
+    <div class="jumbotron" style="padding: 20px; text-align: right">
+        <h2>Shop for more than 30 brands on MobiKart!</h2>
         <p>Choose from a plethora of brands and get what you want!</p>
         <p><a class="btn btn-primary btn-lg" href="#" style="margin: 20px" role="button">Start Choosing</a></p>
+    </div>
+    <div class="jumbotron" style="padding: 20px">
+        <h2>Exciting Offers!</h2>
+        <p>Check out the latest year end offers and avail huge discounts!</p>
+        <p><a class="btn btn-primary btn-lg" style="margin: 20px" href="#" role="button">Learn more</a></p>
     </div>
 </div>
 </body>
