--- a/WebContent/templates/index.html
+++ b/WebContent/templates/index.html
@@ -24,12 +24,28 @@
 <body>
 <div class="col-lg-12" style="padding: 0px">
     <div class="col-lg-12 btn-group" style="padding: 0px">
-        <button id="phones" class="col-lg-2 btn btn-primary">Mobile Phones</button>
+        <!--<button id="phones" class="col-lg-2 btn btn-primary">Mobile Phones</button>-->
+        <button type="button" class="col-lg-2 btn btn-primary  dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Mobile Phones <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu">
+            <li><a href="#">Nokia</a></li>
+            <li><a href="#">Apple</a></li>
+            <li><a href="#">Samsung</a></li>
+            <li><a href="#">Lg</a></li>
+            <li><a href="#">Motorola</a></li>
+            <li><a href="#">Microsoft</a></li>
+            <li><a href="#">Lenovo</a></li>
+            <li><a href="#">Blackberry</a></li>
+            <li><a href="#">Sony</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">View All</a></li>
+        </ul>
         <button id="accessories" class="col-lg-2 btn btn-primary">Accessories</button>
         <button id="offers" class="col-lg-2 btn btn-primary">Special Offers</button>
         <button id="reviews" class="col-lg-2 btn btn-primary">Reviews</button>
         <button id="compare" class="col-lg-2 btn btn-primary">Compare</button>
-        <button id="blog" class="col-lg-2 btn btn-primary">Blog</button>
+        <button id="blog" class="col-lg-2 btn btn-primary">Contact</button>
     </div>
     <div class="jumbotron" style="padding: 20px; text-align: right">
         <h2>Shop for more than 30 brands on MobiKart!</h2>
