--- a/WebContent/templates/index.html
+++ b/WebContent/templates/index.html
@@ -7,12 +7,15 @@
     <script src="../vendor/js/jquery-ui.min.js"></script>
     <script src="../vendor/js/bootstrap.min.js"></script>
     <script src="../vendor/js/angular.min.js"></script>
-
+    <script src="../controller/MobileController.js"></script>
 
     <meta charset="UTF-8">
     <title></title>
-    <div ng-app="">
-    <img style="float: left" src="../img/banner.png">
+</head>
+<body>
+<div ng-app="mobikart">
+    <div>
+        <img style="float: left" src="../img/banner.png">
         <span style="float: right; padding: 20px 50px 20px 20px">
             <a class="glyphicon glyphicon-shopping-cart " href="#"></a>
         </span>
@@ -20,42 +23,48 @@
             <a href="#">Login&nbsp;</a>
         </span>
     </div>
-</head>
-<body>
-<div class="col-lg-12" style="padding: 0px">
-    <div class="col-lg-12 btn-group" style="padding: 0px">
-        <!--<button id="phones" class="col-lg-2 btn btn-primary">Mobile Phones</button>-->
-        <button type="button" class="col-lg-2 btn btn-primary  dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Mobile Phones <span class="caret"></span>
-        </button>
-        <ul class="dropdown-menu">
-            <li><a href="#">Nokia</a></li>
-            <li><a href="#">Apple</a></li>
-            <li><a href="#">Samsung</a></li>
-            <li><a href="#">Lg</a></li>
-            <li><a href="#">Motorola</a></li>
-            <li><a href="#">Microsoft</a></li>
-            <li><a href="#">Lenovo</a></li>
-            <li><a href="#">Blackberry</a></li>
-            <li><a href="#">Sony</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">View All</a></li>
-        </ul>
-        <button id="accessories" class="col-lg-2 btn btn-primary">Accessories</button>
-        <button id="offers" class="col-lg-2 btn btn-primary">Special Offers</button>
-        <button id="reviews" class="col-lg-2 btn btn-primary">Reviews</button>
-        <button id="compare" class="col-lg-2 btn btn-primary">Compare</button>
-        <button id="blog" class="col-lg-2 btn btn-primary">Contact</button>
-    </div>
-    <div class="jumbotron" style="padding: 20px; text-align: right">
-        <h2>Shop for more than 30 brands on MobiKart!</h2>
-        <p>Choose from a plethora of brands and get what you want!</p>
-        <p><a class="btn btn-primary btn-lg" href="#" style="margin: 20px" role="button">Start Choosing</a></p>
-    </div>
-    <div class="jumbotron" style="padding: 20px">
-        <h2>Exciting Offers!</h2>
-        <p>Check out the latest year end offers and avail huge discounts!</p>
-        <p><a class="btn btn-primary btn-lg" style="margin: 20px" href="#" role="button">Learn more</a></p>
+    <div class="col-lg-12" style="padding: 0px"  ng-controller="mobCtrl">
+        <div class="col-lg-12 btn-group" style="padding: 0px">
+            <!--<button id="phones" class="col-lg-2 btn btn-primary">Mobile Phones</button>-->
+            <button type="button" class="col-lg-2 btn btn-primary" data-toggle="dropdown" >
+                Mobile Phones <span class="caret"></span>
+            </button>
+            <ul id="one" class="dropdown-menu">
+               <li ng-repeat="comp in companies"><a href="#">
+                    {{ comp }} </a>
+                </li>
+                <li role="separator" class="divider"></li>
+                <li><a href="#">View All</a></li>
+            </ul>
+            <button id="accessories" class="col-lg-2 btn btn-primary dropdown-toggle" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">Accessories
+            </button>
+            <ul id="two" class="dropdown-menu">
+                <li ng-repeat="acc in accessories"><a href="#">
+                    {{ acc }} </a>
+                </li>
+                <li role="separator" class="divider"></li>
+                <li><a href="#">View All</a></li>
+            </ul>
+            <button id="offers" class="col-lg-2 btn btn-primary">Special Offers</button>
+            <button id="reviews" class="col-lg-2 btn btn-primary">Reviews</button>
+            <button id="compare" class="col-lg-2 btn btn-primary">Compare</button>
+            <button id="blog" class="col-lg-2 btn btn-primary">Contact</button>
+        </div>
+        <div class="jumbotron" style="padding: 20px; text-align: right">
+            <h2>Shop for more than 30 brands on MobiKart!</h2>
+
+            <p>Choose from a plethora of brands and get what you want!</p>
+
+            <p><a class="btn btn-primary btn-lg" href="#" style="margin: 20px" role="button">Start Choosing</a></p>
+        </div>
+        <div class="jumbotron" style="padding: 20px">
+            <h2>Exciting Offers!</h2>
+
+            <p>Check out the latest year end offers and avail huge discounts!</p>
+
+            <p><a class="btn btn-primary btn-lg" style="margin: 20px" href="#" role="button">Learn more</a></p>
+        </div>
     </div>
 </div>
 </body>
