--- a/WebContent/templates/index.html
+++ b/WebContent/templates/index.html
@@ -23,47 +23,66 @@
             <a href="#">Login&nbsp;</a>
         </span>
     </div>
-    <div class="col-lg-12" style="padding: 0px"  ng-controller="mobCtrl">
+    <div class="col-lg-12" style="padding: 0px" ng-controller="mobCtrl">
         <div class="col-lg-12 btn-group" style="padding: 0px">
             <!--<button id="phones" class="col-lg-2 btn btn-primary">Mobile Phones</button>-->
-            <button type="button" class="col-lg-2 btn btn-primary" data-toggle="dropdown" >
-                Mobile Phones <span class="caret"></span>
-            </button>
-            <ul id="one" class="dropdown-menu">
-               <li ng-repeat="comp in companies"><a href="#">
-                    {{ comp }} </a>
-                </li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">View All</a></li>
-            </ul>
-            <button id="accessories" class="col-lg-2 btn btn-primary dropdown-toggle" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">Accessories
-            </button>
-            <ul id="two" class="dropdown-menu">
-                <li ng-repeat="acc in accessories"><a href="#">
-                    {{ acc }} </a>
-                </li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">View All</a></li>
-            </ul>
-            <button id="offers" class="col-lg-2 btn btn-primary">Special Offers</button>
-            <button id="reviews" class="col-lg-2 btn btn-primary">Reviews</button>
-            <button id="compare" class="col-lg-2 btn btn-primary">Compare</button>
-            <button id="blog" class="col-lg-2 btn btn-primary">Contact</button>
+            <div class=" col-lg-2 btn-group" style="padding: 0px">
+                <button type="button" class="col-lg-12 btn btn-primary " data-toggle="dropdown">
+                    <span class="glyphicon glyphicon-phone"></span>  Mobile Phones <span class="caret"></span>
+                </button>
+                <ul class="col-lg-12 dropdown-menu">
+                    <li ng-repeat="comp in companies"><a href="#">
+                        {{ comp }} </a>
+                    </li>
+                    <li role="separator" class="divider"></li>
+                    <li><a href="#">View All</a></li>
+                </ul>
+            </div>
+            <div class="col-lg-2 btn-group" style="padding: 0px">
+                <button type="button" id="accessories" class="col-lg-12 btn btn-primary dropdown-toggle " data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-headphones"></span>  Accessories  <span class="caret"></span>
+                </button>
+                <ul class="col-lg-12 dropdown-menu">
+                    <li ng-repeat="acc in accessories"><a href="#">
+                        {{ acc }} </a>
+                    </li>
+                    <li role="separator" class="divider"></li>
+                    <li><a href="#">View All</a></li>
+                </ul>
+            </div>
+            <button id="offers" class="col-lg-2 btn btn-primary"><span class="glyphicon glyphicon-gift"></span>  Special Offers</button>
+            <button id="reviews" class="col-lg-2 btn btn-primary"><span class="glyphicon glyphicon-list-alt"></span>  Reviews</button>
+            <button id="compare" class="col-lg-2 btn btn-primary"><span class="glyphicon glyphicon-transfer"></span>  Compare</button>
+            <button id="blog" class="col-lg-2 btn btn-primary"><span class="glyphicon glyphicon-earphone"></span>  Contact</button>
         </div>
-        <div class="jumbotron" style="padding: 20px; text-align: right">
-            <h2>Shop for more than 30 brands on MobiKart!</h2>
+        <div>
 
-            <p>Choose from a plethora of brands and get what you want!</p>
-
-            <p><a class="btn btn-primary btn-lg" href="#" style="margin: 20px" role="button">Start Choosing</a></p>
         </div>
-        <div class="jumbotron" style="padding: 20px">
-            <h2>Exciting Offers!</h2>
+        <div class="jumbotron" style=" text-align: right; height: 400px">
+            <div class="col-md-4">
+                <img style="float: left" src="../img/phones1.png">
+            </div>
+            <div class="col-md-8">
+                <h2>Shop for more than 30 brands on MobiKart!</h2>
 
-            <p>Check out the latest year end offers and avail huge discounts!</p>
+                <p>Choose from a plethora of brands and get what you want!</p>
 
-            <p><a class="btn btn-primary btn-lg" style="margin: 20px" href="#" role="button">Learn more</a></p>
+                <p><a class="btn btn-primary btn-lg" href="#" style="margin: 20px" role="button">Start Choosing</a></p>
+            </div>
+
+        </div>
+        <div class="jumbotron">
+
+            <div class="col-md-8">
+                <h2>Exciting Offers!</h2>
+
+                <p>Check out the latest year end offers and avail huge discounts!</p>
+
+                <p><a class="btn btn-primary btn-lg" style="margin: 20px" href="#" role="button">Learn more</a></p>
+            </div>
+            <div class="col-md-4">
+                <img style="float: left" src="../img/offers.png">
+            </div>
         </div>
     </div>
 </div>
